vault sync: 2026-02-03 11:17 | mac | 3 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/微信登录相关接口开发/商品浏览功能.md
JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md

--- a/JavaNotes/sky-take-out/微信登录相关接口开发/商品浏览功能.md
+++ b/JavaNotes/sky-take-out/微信登录相关接口开发/商品浏览功能.md
@@ -109,3 +109,256 @@
 | ├─ name        | string   | 必须   |     | 菜品名称 |               |
 | msg            | string   | 非必须  |     |      |               |
 # 代码开发
+## `DishController`
+
+```java
+@RestController("userDishController")  
+@RequestMapping("/user/dish")  
+@Slf4j  
+@Api(tags = "C端-菜品浏览接口")  
+public class DishController {  
+    @Autowired  
+    private DishService dishService;  
+  
+    /**  
+     * 根据分类id查询菜品  
+     *  
+     * @param categoryId  
+     * @return  
+     */    @GetMapping("/list")  
+    @ApiOperation("根据分类id查询菜品")  
+    public Result<List<DishVO>> list(Long categoryId) {  
+        Dish dish = new Dish();  
+        dish.setCategoryId(categoryId);  
+        dish.setStatus(StatusConstant.ENABLE);//查询起售中的菜品  
+  
+        List<DishVO> list = dishService.listWithFlavor(dish);  
+  
+        return Result.success(list);  
+    }  
+  
+}
+```
+## `DishService`
+
+```java
+/**  
+ * 条件查询菜品和口味  
+ * @param dish  
+ * @return  
+ */
+ List<DishVO> listWithFlavor(Dish dish);
+```
+## `DishServiceImpl`
+
+```java
+/**  
+ * 条件查询菜品和口味  
+ * @param dish  
+ * @return  
+ */public List<DishVO> listWithFlavor(Dish dish) {  
+    List<Dish> dishList = dishMapper.list(dish);  
+  
+    List<DishVO> dishVOList = new ArrayList<>();  
+  
+    for (Dish d : dishList) {  
+        DishVO dishVO = new DishVO();  
+        BeanUtils.copyProperties(d,dishVO);  
+  
+        //根据菜品id查询对应的口味  
+        List<DishFlavor> flavors = dishFlavorMapper.getByDishId(d.getId());  
+  
+        dishVO.setFlavors(flavors);  
+        dishVOList.add(dishVO);  
+    }  
+  
+    return dishVOList;  
+}
+```
+## `DishMapper`
+
+```java
+/**  
+ * 动态条件查询菜品  
+ * @param dish  
+ * @return  
+ */
+List<Dish> list(Dish dish);
+```
+## `DishMapper.xml`
+
+```xml
+<select id="list" resultType="Dish" parameterType="Dish">  
+    select * from dish    <where>  
+        <if test="name != null">  
+            and name like concat('%',#{name},'%')        
+        </if>  
+        <if test="categoryId != null">  
+            and category_id = #{categoryId}        
+        </if>  
+        <if test="status != null">  
+            and status = #{status}        
+        </if>  
+    </where>  
+    order by create_time desc
+</select>
+```
+## `SetmealController`
+
+```java
+@RestController("userSetmealController")  
+@RequestMapping("/user/setmeal")  
+@Api(tags = "C端-套餐浏览接口")  
+public class SetmealController {  
+    @Autowired  
+    private SetmealService setmealService;  
+  
+    /**  
+     * 条件查询  
+     *  
+     * @param categoryId  
+     * @return  
+     */    
+    @GetMapping("/list")  
+    @ApiOperation("根据分类id查询套餐")  
+    public Result<List<Setmeal>> list(Long categoryId) {  
+        Setmeal setmeal = new Setmeal();  
+        setmeal.setCategoryId(categoryId);  
+        setmeal.setStatus(StatusConstant.ENABLE);  
+  
+        List<Setmeal> list = setmealService.list(setmeal);  
+        return Result.success(list);  
+    }  
+  
+    /**  
+     * 根据套餐id查询包含的菜品列表  
+     *  
+     * @param id  
+     * @return  
+     */    
+    @GetMapping("/dish/{id}")  
+    @ApiOperation("根据套餐id查询包含的菜品列表")  
+    public Result<List<DishItemVO>> dishList(@PathVariable("id") Long id) {  
+        List<DishItemVO> list = setmealService.getDishItemById(id);  
+        return Result.success(list);  
+    }  
+}
+```
+## `SetmealService`
+
+```java
+public interface SetmealService {  
+    /**  
+     * 条件查询  
+     * @param setmeal  
+     * @return  
+     */    
+     List<Setmeal> list(Setmeal setmeal);  
+  
+    /**  
+     * 根据id查询菜品选项  
+     * @param id  
+     * @return  
+     */    
+     List<DishItemVO> getDishItemById(Long id);  
+}
+```
+## `SetmealServiceImpl`
+
+```java
+/**  
+ * 套餐业务实现  
+ */  
+@Service  
+@Slf4j  
+public class SetmealServiceImpl implements SetmealService {  
+  
+    @Autowired  
+    private SetmealMapper setmealMapper;  
+    @Autowired  
+    private SetmealDishMapper setmealDishMapper;  
+    @Autowired  
+    private DishMapper dishMapper;  
+  
+    /**  
+     * 条件查询  
+     * @param setmeal  
+     * @return  
+     */    
+    public List<Setmeal> list(Setmeal setmeal) {  
+        List<Setmeal> list = setmealMapper.list(setmeal);  
+        return list;  
+    }  
+  
+    /**  
+     * 根据id查询菜品选项  
+     * @param id  
+     * @return  
+     */    
+    public List<DishItemVO> getDishItemById(Long id) {  
+        return setmealMapper.getDishItemBySetmealId(id);  
+    }  
+}
+```
+## `SetmealMapper`
+
+```java
+/**  
+ * 动态条件查询套餐  
+ * @param setmeal  
+ * @return  
+ */
+ List<Setmeal> list(Setmeal setmeal);  
+  
+/**  
+ * 根据套餐id查询菜品选项  
+ * @param setmealId  
+ * @return  
+ */
+ @Select("select sd.name, sd.copies, d.image, d.description " +  
+        "from setmeal_dish sd left join dish d on sd.dish_id = d.id " +  
+        "where sd.setmeal_id = #{setmealId}")  
+List<DishItemVO> getDishItemBySetmealId(Long setmealId);
+```
+## `SetmealMapper.xml`
+
+```xml
+<select id="list" parameterType="Setmeal" resultType="Setmeal">  
+    select * from setmeal    
+    <where>  
+        <if test="name != null">  
+            and name like concat('%',#{name},'%')        
+        </if>  
+        <if test="categoryId != null">  
+            and category_id = #{categoryId}        
+        </if>  
+        <if test="status != null">  
+            and status = #{status}        
+        </if>  
+    </where>  
+</select>
+```
+## `CategoryController`
+
+```java
+@RestController("userCategoryController")  
+@RequestMapping("/user/category")  
+@Api(tags = "C端-分类接口")  
+public class CategoryController {  
+  
+    @Autowired  
+    private CategoryService categoryService;  
+  
+    /**  
+     * 查询分类  
+     * @param type  
+     * @return  
+     */    
+    @GetMapping("/list")  
+    @ApiOperation("查询分类")  
+    public Result<List<Category>> list(Integer type) {  
+        List<Category> list = categoryService.list(type);  
+        return Result.success(list);  
+    }  
+}
+```
