--- a/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
+++ b/JavaNotes/sky-take-out/微信登录相关接口开发/微信登录功能.md
@@ -285,7 +285,7 @@ public class JwtTokenUserInterceptor implements HandlerInterceptor {
 
 ---
 
-### 2. 安全保障：请求拦截 (Security Flow)
+## 2. 安全保障：请求拦截 (Security Flow)
 
 这是用户登录**之后**，进行其他操作（比如下单、看个人中心）时的逻辑。
 
@@ -312,7 +312,7 @@ public class JwtTokenUserInterceptor implements HandlerInterceptor {
 
 ---
 
-### 3. 配置规则：`WebMVConfiguration`
+## 3. 配置规则：`WebMVConfiguration`
 
 这是“交通指挥中心”，负责把上面的“守门员”安排到指定的位置。
 
@@ -324,6 +324,6 @@ public class JwtTokenUserInterceptor implements HandlerInterceptor {
         
     - `/user/Shop/Staus`：看来店铺状态也是公开信息，不需要登录就能看。
         
-### 逻辑亮点
+## 逻辑亮点
 
 使用了 **OpenID 作为唯一键**，这是开发微信小程序最标准的做法。同时配合 `ThreadLocal` (`BaseContext`) 存储用户状态，这在处理并发请求时是非常优雅的解耦方式。
