vault sync: 2026-02-03 14:09 | mac | 1 files
Affected files:
JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md

--- a/JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md
+++ b/JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md
@@ -14,5 +14,44 @@
 | ------ | ----------- |
 | dish_1 | string(...) |
 - 数据库中菜品有变更时清理缓存数据
+	- 修改管理段接口的DishController的相关方法 加入清理缓存的逻辑 需要改造的方法：
+		- 新增菜品
+		- 修改菜品
+		- 批量删除菜品
+		- 起售/停售菜品
 ## 代码开发
+## `DishController`
+
+```Java
+/**  
+ * 根据分类id查询菜品  
+ *  
+ * @param categoryId  
+ * @return  
+ */@GetMapping("/list")  
+@ApiOperation("根据分类id查询菜品")  
+public Result<List<DishVO>> list(Long categoryId) {  
+    // 构造redis中的key 规则：dish_分类id  
+    String key = "dish_" + categoryId;  
+  
+    // 查询redis中是否存在菜品数据  
+    List<DishVO> list = (List<DishVO>) redisTemplate.opsForValue().get(key);  
+    if (list != null && list.size() == 0) {  
+        // 如果存在 直接返回 无需查询数据库  
+        return Result.success(list);  
+    }  
+  
+    // 如果不存在 查询数据库 将查询到的数据存入redis  
+    Dish dish = new Dish();  
+    dish.setCategoryId(categoryId);  
+    dish.setStatus(StatusConstant.ENABLE);//查询起售中的菜品  
+  
+    list = dishService.listWithFlavor(dish);  
+    redisTemplate.opsForValue().set(key, list);  
+  
+    return Result.success(list);  
+}
+```
+通过redis 实现将数据库中的数据存入redis中以便于快速查询
+
 ## 功能测试
