vault sync: 2026-02-03 14:45 | mac | 3 files
Affected files:
JavaNotes/sky-take-out/Content.md
JavaNotes/sky-take-out/缓存商品相关接口开发/Spring Cache.md
JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md

--- a/JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md
+++ b/JavaNotes/sky-take-out/缓存商品相关接口开发/缓存菜品功能.md
@@ -1,7 +1,7 @@
-## 问题说明
+# 问题说明
 
 用户端小程序展示的菜品数据都是通过查询数据库获得 如果用户端访问量比较大 数据库访问压力随之增大
-## 实现思路
+# 实现思路
 
 通过Redis来缓存菜品数据 减少数据库查询操作
 开始 $\rightarrow$ 后端服务 $\rightarrow$  缓存是否存在 $\xrightarrow{NO}$ 查询数据库 $\rightarrow$ 载入缓存
@@ -19,7 +19,7 @@
 		- 修改菜品
 		- 批量删除菜品
 		- 起售/停售菜品
-## 代码开发
+# 代码开发
 ## `DishController`
 
 ```Java
@@ -54,4 +54,18 @@ public Result<List<DishVO>> list(Long categoryId) {
 ```
 通过redis 实现将数据库中的数据存入redis中以便于快速查询
 
+## `admin/DishController`
+
+```java
+/**  
+ * 清理菜品缓存  
+ * @param pattern  
+ */  
+private void cleanCache(String pattern) {  
+    Set keys = redisTemplate.keys(pattern);  
+    redisTemplate.delete(keys);  
+}
+```
 ## 功能测试
+
+前后端联调
