vault sync: 2026-02-03 18:47 | mac | 3 files
Affected files:
JavaNotes/sky-take-out/购物车相关接口开发/查看购物车.md
JavaNotes/sky-take-out/购物车相关接口开发/添加购物车.md
JavaNotes/sky-take-out/购物车相关接口开发/清空购物车.md

--- a/JavaNotes/sky-take-out/购物车相关接口开发/添加购物车.md
+++ b/JavaNotes/sky-take-out/购物车相关接口开发/添加购物车.md
@@ -12,6 +12,19 @@
 | setmealId | integer | 否    |     | 套餐id |
 | dishId    | integer | 否    |     | 菜品id |
 | flavor    | string  | 否    |     | 口味   |
+## `ShoppingCartDTO`
+
+```java
+@Data  
+public class ShoppingCartDTO implements Serializable {  
+  
+    private Long dishId;  
+    private Long setmealId;  
+    private String dishFlavor;  
+  
+}
+```
+
 - 返回数据 
 
 | 名称   | 类型      | 是否必须 | 默认值 | 备注  | 其他信息         |
@@ -26,3 +39,212 @@
 每个商品都分别买了几个
 不同用户的购物车需要区分开
 [[数据库设计文档#^fc621d|shopping_cart表]]
+```java
+/**  
+ * 购物车  
+ */  
+@Data  
+@Builder  
+@NoArgsConstructor  
+@AllArgsConstructor  
+public class ShoppingCart implements Serializable {  
+  
+    private static final long serialVersionUID = 1L;  
+  
+    private Long id;  
+  
+    //名称  
+    private String name;  
+  
+    //用户id  
+    private Long userId;  
+  
+    //菜品id  
+    private Long dishId;  
+  
+    //套餐id  
+    private Long setmealId;  
+  
+    //口味  
+    private String dishFlavor;  
+  
+    //数量  
+    private Integer number;  
+  
+    //金额  
+    private BigDecimal amount;  
+  
+    //图片  
+    private String image;  
+  
+    private LocalDateTime createTime;  
+}
+```
+# 代码开发
+## `ShoppingCartController`
+
+```java
+@RestController  
+@RequestMapping("/user/shoppingCart")  
+@Slf4j  
+@Api(tags = "C端-购物车相关接口")  
+public class ShoppingCartController {  
+  
+    @Autowired  
+    private ShoppingCartService shoppingCartService;  
+  
+    /**  
+     * 添加购物车  
+     *  
+     * @param shoppingCartDTO  
+     * @return  
+     */  
+    @PostMapping("/add")  
+    @ApiOperation("添加购物车")  
+    public Result add(@RequestBody ShoppingCartDTO shoppingCartDTO) {  
+        log.info("添加购物车，商品信息为：{}", shoppingCartDTO);  
+        shoppingCartService.addShoppingCart(shoppingCartDTO);  
+  
+        return Result.success();  
+    }  
+}
+```
+## `ShoppingCartService`
+
+```java
+public interface ShoppingCartService {  
+  
+    /**  
+     * 添加购物车  
+     * @param shoppingCartDTO  
+     */  
+    void addShoppingCart(ShoppingCartDTO shoppingCartDTO);  
+}
+```
+## `ShoppingCartServiceImpl`
+
+```java
+@Service  
+@Slf4j  
+public class ShoppingCartServiceImpl implements ShoppingCartService {  
+  
+    @Autowired  
+    private ShoppingCartMapper shoppingCartMapper;  
+  
+    @Autowired  
+    private DishMapper dishMapper;  
+  
+    @Autowired  
+    private SetmealMapper setmealMapper;  
+  
+    /**  
+     * 添加购物车  
+     * @param shoppingCartDTO  
+     */  
+    @Override  
+    public void addShoppingCart(ShoppingCartDTO shoppingCartDTO) {  
+        // 判断当前商品在购物车是否存在  
+        ShoppingCart shoppingCart = new ShoppingCart();  
+        BeanUtils.copyProperties(shoppingCartDTO, shoppingCart);  
+        Long userId = BaseContext.getCurrentId();  
+        shoppingCart.setUserId(userId);  
+  
+        List<ShoppingCart> list = shoppingCartMapper.list(shoppingCart);  
+  
+        // 如果已经存在 只需要将数量加一  
+        if(list!= null && list.size()>0){  
+            ShoppingCart cart = list.get(0);  
+            cart.setNumber(cart.getNumber() + 1);  
+            shoppingCartMapper.updateNumberById(cart);  
+        }else{  
+            // 如果不存在 需要插入一条购物车数据  
+  
+            // 判断本次添加的是菜品还是套餐  
+            Long dishId = shoppingCartDTO.getDishId();  
+            if(dishId!=null){  
+                // 添加到购物车的是菜品  
+                Dish dish = dishMapper.getById(dishId);  
+                shoppingCart.setName(dish.getName());  
+                shoppingCart.setImage(dish.getImage());  
+                shoppingCart.setAmount(dish.getPrice());  
+            }else{  
+                // 本次添加到的购物车是套餐  
+                Long setmealId = shoppingCartDTO.getSetmealId();  
+  
+                Setmeal setmeal = setmealMapper.getById(setmealId);  
+                shoppingCart.setName(setmeal.getName());  
+                shoppingCart.setImage(setmeal.getImage());  
+                shoppingCart.setAmount(setmeal.getPrice());  
+            }  
+            shoppingCart.setNumber(1);  
+            shoppingCart.setCreateTime(LocalDateTime.now());  
+            shoppingCartMapper.insert(shoppingCart);  
+        }  
+    }  
+}
+```
+
+## `ShoppingCartMapper`
+
+```java
+@Mapper  
+public interface ShoppingCartMapper {  
+  
+    /**  
+     * 动态条件查询  
+     * @param shoppingCart  
+     * @return  
+     */  
+    List<ShoppingCart> list(ShoppingCart shoppingCart);  
+  
+    /**  
+     * 根据id修改数量  
+     * @param shoppingCart  
+     */  
+    @Update("update shopping_cart set number = #{number} where id = #{id}")  
+    void updateNumberById(ShoppingCart shoppingCart);  
+  
+    /**  
+     * 插入购物车数据  
+     * @param shoppingCart  
+     */  
+    @Insert("insert into shopping_cart (name, user_id, dish_id, setmeal_id, dish_flavor, number, amount, image, create_time) " +  
+            "values (#{name}, #{userId}, #{dishId}, #{setmealId}, #{dishFlavor}, #{number}, #{amount}, #{image}, #{createTime})")  
+    void insert(ShoppingCart shoppingCart);  
+}
+```
+
+## `ShoppingCartMapper.xml`
+
+```xml
+<mapper namespace="com.sky.mapper.ShoppingCartMapper">  
+    <select id="list" resultType="com.sky.entity.ShoppingCart">  
+        select * from shopping_cart  
+        <where>  
+            <if test="userId !=null">  
+                and user_id = #{userId}  
+            </if>  
+            <if test="setmealId!= null">  
+                and setmeal_id = #{setmealId}  
+            </if>  
+            <if test="dishId != null">  
+                and dish_id = #{dishId}  
+            </if>  
+            <if test="dishFlavor != null">  
+                and dish_flavor = #{dishFlavor}  
+            </if>  
+        </where>  
+    </select>  
+</mapper>
+```
+## `SetmealMapper`
+
+```java
+/**  
+ * 根据id查询套餐  
+ * @param setmealId  
+ * @return  
+ */  
+@Select("select * from setmeal where id = #{setmealId}")  
+Setmeal getById(Long setmealId);
+```
