vault sync: 2026-02-03 19:09 | mac | 2 files
Affected files:
JavaNotes/sky-take-out/购物车相关接口开发/删减购物车.md
JavaNotes/sky-take-out/购物车相关接口开发/清空购物车.md

--- a/JavaNotes/sky-take-out/购物车相关接口开发/清空购物车.md
+++ b/JavaNotes/sky-take-out/购物车相关接口开发/清空购物车.md
@@ -1,1 +1,59 @@
 # 需求分析和设计
+## 接口设计
+- 基本信息
+	- Path: /user/shoppingCart/clean
+	- Method: DELETE
+- 请求参数
+- 返回数据
+
+| 名称   | 类型      | 是否必须 | 默认值 | 备注  | 其他信息         |
+| ---- | ------- | ---- | --- | --- | ------------ |
+| code | integer | 必须   |     |     | format：int32 |
+| data | string  | 非必须  |     |     |              |
+| msg  | string  | 非必须  |     |     |              |
+# 代码开发
+## `ShoppingCartController`
+
+```java
+/**  
+ * 清空购物车  
+ * @return  
+ */  
+@DeleteMapping("/clean")  
+@ApiOperation("清空购物车")  
+public Result clean(){  
+    shoppingCartService.cleanShoppingCart();  
+    return Result.success();  
+}
+```
+## `ShoppingCarterService`
+
+```java
+/**  
+ * 清空购物车  
+ */  
+void cleanShoppingCart();
+```
+## `ShoppingCartServiceImpl`
+
+```java
+/**  
+ * 清空购物车  
+ */  
+@Override  
+public void cleanShoppingCart() {  
+    // 获取当前用户id  
+    Long userId = BaseContext.getCurrentId();  
+    shoppingCartMapper.deleteByUserId(userId);  
+}
+```
+## `ShoppingCartMapper`
+
+```java
+/**  
+ * 根据用户id删除购物车数据  
+ * @param userId  
+ */  
+@Delete("delete from shopping_cart where user_id = #{userId}")  
+void deleteByUserId(Long userId);
+```
